--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -1,5 +1,5 @@
 set -g prefix C-SPACE
-ket -g base-index 1
+set -g base-index 1
 set -g renumber-windows on
 set -g mode-keys vi
 set -g status-position top
@@ -12,5 +12,7 @@ set -g status-right ""
 bind r source-file "~/.config/tmux/tmux.conf"
 bind l run "tmux neww ~/.local/bin/tmux-sessionizer $HOME/notes/econ"
 bind k run "tmux neww ~/.local/bin/tmux-sessionizer $HOME/python/"
+bind j run "tmux neww ~/.local/bin/tmux-sessionizer $HOME/java/"
+bind h run "tmux neww ~/.local/bin/tmux-sessionizer $HOME/elixir/"
 bind o run "tmux neww ~/.local/bin/tmux-sessionizer $HOME/.config/"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
